# bridge

./: Cargo.toml  README.md
src/: config.json  contract_tests.rs  crypto_tests.rs  lib.rs  main.rs  test.rs  tests.rs
src/gadgets/: crypto.rs
src/middleware/: account.rs  cli.rs  config.rs  crypto.rs  mod.rs  old_transactions_file_from_py_rs  provider.rs  transactions.rs
src/middleware/artifacts/: Abi.json  Payments.json  SemaphoreNetworkHSS.json
