[package]
name = "semaphore_network_hss_bridge_srs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-bigint = "0.4.5"
num-traits = "0.2.19"
serde = "1.0.203"
serde_json = "1.0.117"
serde_derive = "1.0.203"
web3 = "0.19.0"
secp256k1 = "0.29.0"
prefix-hex = "0.7.1"
ethsign = "0.9.0"
tokio = "1.38.0"
ethers = "2.0"