[package]
name = "semaphore_network_hss_bridge_srs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.8"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-bigint = "0.4.5"
num-traits = "0.2.19"
serde = "1.0.203"
serde_json = "1.0.117"
serde_derive = "1.0.203"
secp256k1 = "0.29.0"
prefix-hex = "0.7.1"
tokio = {version = "1.38.0", features = ["full"] }
eyre = "0.6.12"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "dc56a76", features = [
    "consensus",
    "contract",
    "eips",
    "kzg",
    "network",
    "node-bindings",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "providers",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "rpc-types-trace",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-wallet",
    "signer-yubihsm",
    "signers",
] }
